[gd_scene load_steps=4 format=3 uid="uid://bnj72muxmmk2t"]

[ext_resource type="Script" path="res://shop/Blackout.gd" id="1_62712"]
[ext_resource type="AudioStream" uid="uid://3seg4r7axfrs" path="res://audio/sfx/thunder.mp3" id="3_h0ws5"]
[ext_resource type="AudioStream" uid="uid://ducs4ppwed44v" path="res://audio/sfx/flashlight.mp3" id="4_8lvul"]

[node name="Blackout" type="CanvasLayer"]
script = ExtResource("1_62712")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Thunder" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_h0ws5")
volume_db = 12.0
bus = &"SFX"

[node name="Flashlight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8lvul")
bus = &"SFX"

[node name="StartTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="Thunder" to="." method="_on_audio_finished"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
